--- a/slide_deck_template.slides.html
+++ b/slide_deck_template.slides.html
@@ -13230,24 +13230,12 @@ Trip duration,
 Days of week(workdays and weekends),
 Hours of day.</p>
 </blockquote>
-<h2 id="Dataset-Overview">Dataset Overview<a class="anchor-link" href="#Dataset-Overview">&#182;</a></h2><blockquote><p>The data consisted  of information about individual rides made in bike-sharing system with approximately 183412 record. The attributes included user type(subscriber or customer) each trip start and end (time,location,duration) ,members age ,gender and bike share for all trip.We delete about 8265 with null data , some data contain typo but i prefer not to delete it like some ages bigger than 80 and 100 years.</p>
+<h2 id="Dataset-Overview">Dataset Overview<a class="anchor-link" href="#Dataset-Overview">&#182;</a></h2><blockquote><p>The data consisted  of information about individual rides made in bike-sharing system with approximately 183412 record. The attributes included user type(subscriber or customer) each trip start and end (time,location,duration) ,members age ,gender and bike share for all trip.We delete about 8265 with null data .</p>
 </blockquote>
 
 </div>
 </div>
-</div><aside class="notes">
-
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<blockquote><p>Note that the above cells have been set as "Skip"-type slides. That means
-that when the notebook is rendered as http slides, those cells won't show up.</p>
-</blockquote>
-
-</div>
-</div>
-</div>
-</aside></section></section><section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -13808,41 +13796,6 @@ as we said before its appear opviosly here that many users use bikes to go and r
 </div>
 
 </div>
-</div>
-
-</div><aside class="notes">
-
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<blockquote><p>Once you're ready to finish your presentation, check your output by using
-nbconvert to export the notebook and set up a server for the slides. From the
-terminal or command line, use the following expression:</p>
-<blockquote><p><code>jupyter nbconvert &lt;file_name&gt;.ipynb --to slides --post serve --template output_toggle</code></p>
-</blockquote>
-<p>This should open a tab in your web browser where you can scroll through your
-presentation. Sub-slides can be accessed by pressing 'down' when viewing its parent
-slide. Make sure you remove all of the quote-formatted guide notes like this one
-before you finish your presentation!</p>
-</blockquote>
-
-</div>
-</div>
-</div>
-</aside>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-    </div>
-</div>
-</div>
-
 </div>
 
 </div></section></section>
